crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_reports_unresolved_named_types.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\ntype alias Wrapped = Missing\n"
---
[
    NotFoundType {
        region: Region {
            start: Position {
                line: 3,
                column: 22,
            },
            end: Position {
                line: 3,
                column: 29,
            },
        },
        prefix: None,
        name: "Missing",
        suggestions: PossibleNames {
            locals: [
                "List",
            ],
            qualified: [],
        },
    },
]
