crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_requires_explicit_header.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmain = 42\n"
---
[
    MissingModuleHeader,
]
