crates/alder-can/src/snapshots/alder_can__module__tests__module_shell_with_imported_exposed_union_types.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\nimport Maybe exposing (Maybe)\n\ntype alias Wrapped a = Maybe a\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 30,
                    },
                },
                value: Alias(
                    "Wrapped",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Alias {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 12,
                        },
                        end: Position {
                            line: 5,
                            column: 19,
                        },
                    },
                    value: "Wrapped",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 24,
                        },
                        end: Position {
                            line: 5,
                            column: 31,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Maybe",
                            },
                            name: "Maybe",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 30,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 31,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
